
	<LinearLayout 
	    xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical"
    	android:gravity="bottom"
    	android:background="@drawable/img_fondo" 	
    	tools:context="com.aprendeandroid.sqlitealbum.MenuActivity" >
  
         <Button
             android:id="@+id/btnCapturas"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/capturas"
            android:layout_marginRight="-9dip"
            android:layout_marginLeft="-9dip"
             android:textColor="#eceff1" />
         
         <Button
            android:id="@+id/btnInfo"
     		android:layout_height="wrap_content"
     		android:layout_width="match_parent"
     		android:text="@string/info"
            android:layout_marginTop="-9dip"
            android:layout_marginRight="-9dip"
            android:layout_marginLeft="-9dip"
       		android:textColor="#eceff1" />
         
         <Button
            android:id="@+id/btnMap"
     		android:layout_height="wrap_content"
     		android:layout_width="match_parent"
            android:layout_marginTop="-9dip"
            android:layout_marginBottom="-9dip"
            android:layout_marginRight="-9dip"
            android:layout_marginLeft="-9dip"
     		android:text="@string/map"
       		android:textColor="#eceff1" />

	</LinearLayout>
